--- a/Assets/.gitattributes
+++ b/Assets/.gitattributes
@@ -1,1 +1,3 @@
 New[[:space:]]Terrain[[:space:]]1.asset filter=lfs diff=lfs merge=lfs -text
+External[[:space:]]Assets/Proxy[[:space:]]Games/Stylized[[:space:]]Nature[[:space:]]Kit/Terrain/* filter=lfs diff=lfs merge=lfs -text
+Terrains/New[[:space:]]Terrain[[:space:]]1.asset filter=lfs diff=lfs merge=lfs -text
